# single-decree-paxos-rs

./: Cargo.toml
src/: acceptor.rs  main.rs  paxos.rs  proposer.rs
