[package]
name = "single-decree-paxos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
tarpc = { version = "0.33.0", features = ["tokio1"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util"] }
